--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "fmt": "npx prettier --write .",
     "dev": "vite",
+    "dev1": "npm run fmt && npm run dev",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
